Support tooltip for BoundedLabel.

BoundedLabel does not directly inherits Label, and uses composition.
This CL adds implementation of tooltip related methods to BoundedLabel,
so that BoundedLabel would also have tooltip functionality similar to
Label.

TEST=manual
BUG=780445

Change-Id: I7eaf0a9421fe67810382307b101f567979e51d93
Reviewed-on: https://chromium-review.googlesource.com/753542
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#514926}
Former-commit-id: 91d33f28458664dac4ae08908d0fea9483ad9b94